syntax = "proto3";


option go_package = "github.com/ChenaLi0816/etcd-registrar/proto/pb";

service EtcdRegistrar {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc HeartbeatActive(Service) returns (Reply);
  rpc Logout(Service) returns (Reply);
}


message Service {
  string name = 1;
  string address = 2;
}

message RegisterRequest {
  string name = 1;
  string address = 2;
  int64 lease_time = 3;
}



message RegisterResponse {
  string service_name = 1;
}

message Reply {

}